--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </header>
             <div class="mv">
                 <div class="mv__textArea">
-                    <h2 clas="mv__title">START</h2>
+                    <h2 class="mv__title">START</h2>
                     <div class="mv__subtitle">仕事に最高のスタートを。</div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                             <div class="service-list">
                                 <div class="service-list__item">
                                     <figure class="service-list__img-wrapper">
-                                        <span class="material-symbols-rounded">work</span>
+                                        <span class="service-list__img material-symbols-rounded">work</span>
                                     </figure>
                                     <div class="service-list__body">
                                         <div class="service-list__title">人材紹介業</div>
@@ -118,7 +118,7 @@
                                 </div>
                                 <div class="service-list__item">
                                     <figure class="service-list__img-wrapper">
-                                        <span class="material-symbols-rounded">location_city</span>
+                                        <span class="service-list__img material-symbols-rounded">location_city</span>
                                     </figure>
                                     <div class="service-list__body">
                                         <div class="service-list__title">スクール事業</div>
@@ -127,7 +127,7 @@
                                 </div>
                                 <div class="service-list__item">
                                     <figure class="service-list__img-wrapper">
-                                        <span class="material-symbols-rounded">desktop_windows</span>
+                                        <span class="service-list__img material-symbols-rounded" class="service-list__img">desktop_windows</span>
                                     </figure>
                                     <div class="service-list__body">
                                         <div class="service-list__title">Webメディア運営</div>
