--- a/message.html
+++ b/message.html
@@ -52,7 +52,7 @@
                         <div class="message__subtitle">大事なお仕事探しを応援させてください</div>
                         <div class="ceo-message">
                             <div class="ceo-message__img-wrapper">
-                                <img src="img/ceo.jpg" alt="ショーン・デイビット・ジュニア" width="100" height="100">
+                                <img class="ceo-message__img" src="img/ceo.jpg" alt="ショーン・デイビット・ジュニア" width="100" height="100">
                             </div>
                             <div class="ceo-message__text">
                                 <p>
