レスポンシブデザイン

--- a/message.html
+++ b/message.html
@@ -83,7 +83,7 @@
                             <li class="footer-nav__item">
                                 <a href="#" class="footer-nav__link">メッセージ</a>
                             </li>
-                            <li class="footer-nav__link">
+                            <li class="footer-nav__item">
                                 <a href="#" class="footer-nav__link">会社概要</a>
                             </li>
                         </ul>
