--- a/company.html
+++ b/company.html
@@ -17,7 +17,7 @@
     <body>
         <div class="wrapper">
             <header class="header">
-                <div class="header-logo">
+                <div class="header__logo">
                     <a href="#">
                        <img src="img/logo.svg" alt="START">
                     </a>
@@ -137,7 +137,7 @@
                 </div>
             </footer>
         </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.2.min.js" integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
     </body>
 </html>
